--- a/practica3/estilos.css
+++ b/practica3/estilos.css
@@ -1,15 +1,23 @@
-/* From Uiverse.io by ArnavK-09 */ 
+h1 {
+    text-align: center; 
+    font-size: 3em;
+    font-family: 'Arial', sans-serif; 
+    color: #333; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+    margin-top: 50px; 
+    margin-bottom: 20px;
+}
+
 .container {
     width: 100%;
     height: 100%;
     background-image: repeating-linear-gradient(
-      0deg,
-      black,
-      1px,
-      white 1px,
-      white
+        0deg,
+        black,
+        1px,
+        white 1px,
+        white
     );
     background-size: 100% 30px;
     background-color: white;
-  }
-  
+}
