--- a/practica17/views/index.html
+++ b/practica17/views/index.html
@@ -11,6 +11,7 @@
     <div class="container mt-5">
         <h1>Bienvenido a nuestro sitio web</h1>
         <p>Aquí puedes explorar nuestros productos y servicios.</p>
+        <p>Ver localhost:3000</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
