--- a/practica20/views/404.html
+++ b/practica20/views/404.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica 13</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>404</title>
 </head>
 <body>
-    <div>
-        <h1>Practica 20</h1>
-    </div>
-    <script src="index.js"></script>
+
+    <h1>404</h1>
+    <p>La página que buscas no existe</p>
+    
 </body>
 </html>
